added a new file browser-support.txt

--- a/emp/templates/index.html
+++ b/emp/templates/index.html
@@ -128,4 +128,8 @@
 
 <script> function confirm() {alert("Are You Sure To Delete");}</script>
 </body>
+<footer>
+    <p>Author: Meena</p>
+    <P><a href ="mailto: Funuj@ht.com">funuj@ht.com</a></P>
+</footer>
 </html>
